Spacing and footer fix

--- a/static/css/6-footer.css
+++ b/static/css/6-footer.css
@@ -1,5 +1,5 @@
 #footer{
-    justify-content: center;
+    border-top: 1px solid var(--green-c);
 }
 
 .footer-link::after{
